# digital-asset-validator-plugin

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Solana.Dockerfile  accounts-selector-config.json  docker-compose.yml  etl-config.json  geyser-config.json  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/wokflows/: publish.yml
.github/workflows/: labeler.yml  publish.yml  release.yml  snapshot.yml  test.yml
ci/: cargo-build-test.sh  create-tarball.sh  env.sh  rust-version.sh  solana-version.sh
docker/: build.sh  runs.sh
messenger/: Cargo.toml
messenger/src/: lib.rs  messenger.rs  pulsar_messenger.rs  redis_messenger.rs
nft_ingester/src/: main.rs
plerkle/: Cargo.toml  Readme.md
plerkle/src/: Example-Config.toml  accounts_selector.rs  config.rs  config.toml  error.rs  example-config.json  geyser_plugin_nft.rs  lib.rs  metrics.rs  serializer.rs  transaction_selector.rs
plerkle_messenger/: Cargo.toml  Readme.md
plerkle_messenger/src/: error.rs  lib.rs  metrics.rs  plerkle_messenger.rs  pulsar_messenger.rs  redis_messenger.rs
plerkle_messenger/src/redis/: mod.rs  redis_messenger.rs  redis_pool_messenger.rs
plerkle_serialization/: Cargo.toml  Readme.md  account_info.fbs  block_info.fbs  common.fbs  compiled_instruction.fbs  generate_flatbuffers_code.sh  slot_status_info.fbs  transaction_info.fbs
plerkle_serialization/src/: account_info_generated.rs  block_info_generated.rs  common_generated.rs  compiled_instruction_generated.rs  error.rs  lib.rs  slot_status_info_generated.rs  solana_geyser_plugin_interface_shims.rs  transaction_info_generated.rs
plerkle_serialization/src/deserializer/: common.rs  mod.rs  solana.rs
plerkle_serialization/src/serializer/: mod.rs  serializer_common.rs  serializer_stable.rs  serializer_unstable.rs
plerkle_snapshot/: Cargo.toml  Dockerfile  Makefile  README.md  geyser-conf.json  p.json  process_snapshots.sh
plerkle_snapshot/solana-snapshot-etl/: Cargo.toml
plerkle_snapshot/solana-snapshot-etl/src/: archived.rs  solana.rs  unpacked.rs
plerkle_snapshot/src/: app_tracing.rs  append_vec.rs  archived.rs  config.rs  error.rs  lib.rs  main.rs  parallel.rs  plugin.rs  solana.rs  unpacked.rs
scripts/: docker-entrypoint.sh
