[workspace]
members = [
    "plerkle_messenger",
    "plerkle",
    "plerkle_serialization",
    "plerkle_snapshot"
]
resolver = "2"

[workspace.dependencies]
agave-geyser-plugin-interface = ">=2.0, <2.1"
async-mutex = "1.4.0"
async-trait = "0.1.53"
base64 = "0.21.0"
bincode = "1.3.3"
blake3 = "1.3.3"
borsh = "0.10.3"
bs58 = "0.4.0"
bytemuck = "1.7.2"
cadence = "0.29.0"
cadence-macros = "0.29.0"
chrono = "0.4.22"
clap = "4.4.6"
crossbeam = "0.8.2"
csv = "1.1.6"
dashmap = "5.4.0"
dotenvy = "0.15.7"
figment = "0.10.6"
flatbuffers = "23.1.21"
futures = "0.3"
hex = "0.4.3"
indicatif = "0.17.0-rc.11"
itertools = "0.11.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libloading = "0.8.1"
log = "0.4.17"
memmap2 = "0.9.0"
num-integer = { version = "0.1.44", default-features = false }
num_cpus = "1.13.1"
redis = "0.27.2"
reqwest = "0.11.11"
rusqlite = "0.29.0"
serde = "1.0.152"
serde_derive = "1.0.103"
serde_json = "1.0.82"
solana-accounts-db = ">=2.0, <2.1"
solana-frozen-abi-macro = ">=2.0, <2.1"
solana-logger = ">=2.0, <2.1"
solana-program = ">=2.0, <2.1"
solana-runtime = ">=2.0, <2.1"
solana-sdk = ">=2.0, <2.1"
solana-transaction-status = ">=2.0, <2.1"
solana_rbpf = "0.7.2"
spl-token = "4.0.0"
tar = "0.4.38"
thiserror = "1.0.38"
tokio = "1.40.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zstd = "0.12.4"
