[package]
name = "plerkle"
description = "Geyser plugin with dynamic config reloading, message bus agnostic abstractions and a whole lot of fun."
version = "1.12.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.11"
async-trait = "0.1.53"
solana-sdk = { version = "2.1" }
solana-transaction-status = { version = "2.1" }
agave-geyser-plugin-interface = { version = "2.1" }
solana-logger = { version = "2.1" }
thiserror = "1.0.30"
base64 = "0.21.0"
lazy_static = "1.4.0"
bs58 = "0.4.0"
bytemuck = "1.7.2"
serde = "1.0.133"
serde_derive = "1.0.103"
serde_json = "1.0.74"
cadence = "0.29.0"
cadence-macros = "0.29.0"
chrono = "0.4.19"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
  "json",
  "env-filter",
  "ansi",
] }
hex = "0.4.3"
plerkle_messenger = { path = "../plerkle_messenger", version = "1.6.0" }
flatbuffers = "23.1.21"
plerkle_serialization = { path = "../plerkle_serialization", version = "1.6.0" }
tokio = { version = "1.23.0", features = ["full"] }
figment = { version = "0.10.6", features = ["env", "test"] }
dashmap = {version = "5.4.0"}

[dependencies.num-integer]
version = "0.1.44"
default-features = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

