[package]
name = "plerkle"
description = "Geyser plugin with dynamic config reloading, message bus agnostic abstractions and a whole lot of fun."
version = "1.12.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
async-trait = { workspace = true }
solana-sdk = { version = "2.1" }
solana-transaction-status = { version = "2.1" }
agave-geyser-plugin-interface = { version = "2.1" }
solana-logger = { version = "2.1" }
thiserror = { workspace = true }
base64 = { workspace = true }
lazy_static = { workspace = true }
bs58 = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter", "ansi"] }
hex = { workspace = true }
plerkle_messenger = { path = "../plerkle_messenger", version = "1.6.0" }
flatbuffers = { workspace = true }
plerkle_serialization = { path = "../plerkle_serialization", version = "1.6.0" }
tokio = { workspace = true, features = ["full"] }
figment = { workspace = true, features = ["env", "test"] }
dashmap = { workspace = true }
num-integer= { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

