[package]
name = "plerkle_messenger"
description = "Metaplex Messenger trait for Geyser plugin producer/consumer patterns."
version = "1.1.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"

[dependencies]
redis = { version = "0.22.0", features = ["aio", "tokio-comp", "streams"], optional = true}
log = "0.4.11"
thiserror = "1.0.30"
async-trait = "0.1.53"
figment = "0.10.6"
futures = "0.3"
async-mutex = "1.4.0"
serde = {version = "1.0.137", features = ["derive"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
