[package]
name = "plerkle_messenger"
description = "Metaplex Messenger trait for Geyser plugin producer/consumer patterns."
version = "1.12.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"

[dependencies]
redis = { workspace = true, features = ["aio", "tokio-comp", "streams", "tokio-native-tls-comp", "connection-manager"] }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
async-mutex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
blake3 = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
