[package]
name = "plerkle_serialization"
description = "Metaplex Flatbuffers Plerkle Serialization for Geyser plugin producer/consumer patterns."
version = "1.9.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"

[dependencies]
flatbuffers = "23.1.21"
chrono = "0.4.22"
serde = { version = "1.0.152" }
solana-sdk = { version = ">=2.0, <2.1" }
solana-transaction-status = { version = ">=2.0, <2.1" }
bs58 = "0.4.0"
thiserror = "1.0.38"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
