[package]
name = "plerkle_serialization"
description = "Metaplex Flatbuffers Plerkle Serialization for Geyser plugin producer/consumer patterns."
version = "1.10.0"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"

[dependencies]
flatbuffers = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
solana-sdk = { version = "2.1" }
solana-transaction-status = { version = "2.1" }
bs58 = { workspace = true }
thiserror = { workspace = true }
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
