[package]
# Renamed from original "solana-snapshot-etl"
name = "plerkle_snapshot"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/solana-snapshot-etl"
description = "Efficiently unpack Solana snapshots"
authors = ["Richard Patel <me@terorie.dev>"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.17"
solana-runtime = ">=2.0, <2.1"
solana-frozen-abi-macro = ">=2.0, <2.1"
solana-accounts-db = ">=2.0, <2.1"
thiserror = "1.0.31"
bincode = "1.3.3"
serde = { version = "1.0.139", features = ["derive"] }
solana-sdk = ">=2.0, <2.1"
memmap2 = "0.9.0"
itertools = "0.11.0"
tar = "0.4.38"
zstd = "0.12.4"

# Binary deps
borsh = { version = "0.10.3", optional = true }
crossbeam = { version = "0.8.2", optional = true }
csv = { version = "1.1.6", optional = true }
indicatif = { version = "0.17.0-rc.11", optional = true }
libloading = { version = "0.8.1", optional = true }
num_cpus = { version = "1.13.1", optional = true }
reqwest = { version = "0.11.11", features = ["blocking"], optional = true }
rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
flatbuffers = { version = "23.1.21", optional = true }
bs58 = { version = "0.4.0", optional = true }
serde_json = { version = "1.0.82", optional = true }
agave-geyser-plugin-interface = { version = ">=2.0, <2.1", optional = true }
solana-program = { version = ">=2.0, <2.1", optional = true }
solana_rbpf = { version = "0.7.2", optional = true }
spl-token = { version = "4.0.0", optional = true }
json5 = { version = "0.4.1", optional = true }
plerkle_serialization = { path = "../plerkle_serialization", optional = true }
plerkle_messenger = { path = "../plerkle_messenger", optional = true }
tokio = { version = "1.23.0", features = ["full"], optional = true }
async-trait = { version = "0.1.53", optional = true }
figment = { version = "0.10.6", features = ["env"], optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", features = [
  "json",
  "env-filter",
  "ansi",
], optional = true }
dotenvy = { version = "0.15.7", optional = true }

[features]
parallel = []
standalone = [
    "dep:borsh",
    "dep:crossbeam",
    "dep:csv",
    "dep:indicatif",
    "dep:libloading",
    "dep:num_cpus",
    "parallel",
    "dep:reqwest",
    "dep:rusqlite",
    "dep:serde_json",
    "dep:agave-geyser-plugin-interface",
    "dep:solana-program",
    "dep:spl-token",
    "dep:json5",
    "dep:flatbuffers",
    "dep:bs58",
    "dep:plerkle_serialization",
    "dep:tokio",
    "dep:async-trait",
    "dep:plerkle_messenger",
    "dep:figment",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy"
]
opcode_stats = [
    "dep:solana_rbpf",
]

[[bin]]
name = "solana-snapshot-etl"
required-features = ["standalone"]
