[package]
# Renamed from original "solana-snapshot-etl"
name = "plerkle_snapshot"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/solana-snapshot-etl"
description = "Efficiently unpack Solana snapshots"
authors = ["Richard Patel <me@terorie.dev>"]
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
solana-runtime = "2.1"
solana-frozen-abi-macro = "2.1"
solana-accounts-db = "2.1"
thiserror = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-sdk = "2.1"
memmap2 = { workspace = true }
itertools = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }

# Binary deps
borsh = { workspace = true, optional = true }
crossbeam = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
num_cpus = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["blocking"], optional = true }
rusqlite = { workspace = true, features = ["bundled"], optional = true }
flatbuffers = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
agave-geyser-plugin-interface = { version = "2.1", optional = true }
solana-program = { version = "2.1", optional = true }
solana_rbpf = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
json5 = { workspace = true, optional = true }
plerkle_serialization = { path = "../plerkle_serialization", optional = true }
plerkle_messenger = { path = "../plerkle_messenger", optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
async-trait = { workspace = true, optional = true }
figment = { workspace = true, features = ["env"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter", "ansi"], optional = true }
dotenvy = { workspace = true, optional = true }

[features]
parallel = []
standalone = [
    "dep:borsh",
    "dep:crossbeam",
    "dep:csv",
    "dep:indicatif",
    "dep:libloading",
    "dep:num_cpus",
    "parallel",
    "dep:reqwest",
    "dep:rusqlite",
    "dep:serde_json",
    "dep:agave-geyser-plugin-interface",
    "dep:solana-program",
    "dep:spl-token",
    "dep:json5",
    "dep:flatbuffers",
    "dep:bs58",
    "dep:plerkle_serialization",
    "dep:tokio",
    "dep:async-trait",
    "dep:plerkle_messenger",
    "dep:figment",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:dotenvy"
]
opcode_stats = [
    "dep:solana_rbpf",
]

[[bin]]
name = "solana-snapshot-etl"
required-features = ["standalone"]
